--- a/estilos.css
+++ b/estilos.css
@@ -204,7 +204,7 @@ img {
 
 .Galeria{
 	float: left;
-	
+	margin: 0% -6% 2% 8%;
 		
 
 }
@@ -271,3 +271,14 @@ img {
 .Galeria.img6:hover {
 	background: url(Imagenes/ganardor6_b.jpg)no-repeat center;
 }
+
+ /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+ @media (max-width: 600px) {
+    .menu, .Galeria, nav, .menu, img {
+      width: 90%;
+	  height: 90%;
+	  float: center;
+	  
+	}
+}
+
