--- a/estilos.css
+++ b/estilos.css
@@ -204,7 +204,7 @@ img {
 
 .Galeria{
 	float: left;
-	margin: 0% -6% 2% 8%;
+
 		
 
 }
@@ -279,13 +279,33 @@ img {
 
 
 
- /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
- @media (max-width: 600px) {
-    .menu, .Galeria, nav, .menu, img {
-      width: 90%;
-	  height: 90%;
-	  float: center;
-	  
-	}
-}
-
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+  }
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+  }
