--- a/estilos.css
+++ b/estilos.css
@@ -162,7 +162,7 @@ a{color:inherit;text-decoration:none}
 
 header{
 
-   
+	overflow: hidden;
     background-color: rgba(0, 0, 0, 0.781);
     height: 200px;
 }
@@ -171,7 +171,7 @@ nav{
 
     text-align: right;
     background: green;
-    padding: 20px 300px 20px 0px;
+    padding: 20px ;
     margin: 90px 
     0px 0px 0px;
     float: right;
@@ -179,12 +179,6 @@ nav{
 
 }
 
-.menu{
-	margin: 20px;
-	text-align: right;
-
-
-}
 
 span{
 
@@ -205,71 +199,81 @@ img {
 .Galeria{
 	float: left;
 
-		
+	background-size: 100% 100%;	
 
 }
 
 .Galeria.img1{
 
-	width:  420px; height: 350px;
+	padding: 100px;
 	background: url(Imagenes/ganardor1_a.jpg)no-repeat center;
-	
+	background-size: 100% 100%;	
 }
 
 .Galeria.img1:hover {
 	background: url(Imagenes/ganardor1_b.jpg)no-repeat center;
-
+	background-size: 100% 100%;	
 	
 }
 
 .Galeria.img2{
 
-	width: 420px; height: 350px;
+	padding: 100px;
 	background: url(Imagenes/ganardor2_a.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img2:hover {
 	background: url(Imagenes/ganardor2_b.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img3{
 
-	width:  420px; height: 350px;
+	padding: 100px;
 	background: url(Imagenes/ganardor3_a.jpg) no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img3:hover {
 	background: url(Imagenes/ganardor3_b.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img4{
 
-	width: 420px; height: 350px;
+	padding: 100px;
 	background: url(Imagenes/ganardor4_a.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img4:hover {
 	background: url(Imagenes/ganardor4_b.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img5{
 
-	width: 420px; height: 350px;
+	padding: 100px;
 	background: url(Imagenes/ganardor5_a.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img5:hover {
 	background: url(Imagenes/ganardor5_b.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img6{
 
-	width: 420px; height: 350px;
+	padding: 100px;
 	background: url(Imagenes/ganardor6_a.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 .Galeria.img6:hover {
 	background: url(Imagenes/ganardor6_b.jpg)no-repeat center;
+	background-size: 100% 100%;	
 }
 
 
@@ -277,35 +281,31 @@ img {
 
 
 
+@media (max-width: 1160px ) { header, .Galeria {
 
 
-@media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-s-1 {width: 8.33%;}
-    .col-s-2 {width: 16.66%;}
-    .col-s-3 {width: 25%;}
-    .col-s-4 {width: 33.33%;}
-    .col-s-5 {width: 41.66%;}
-    .col-s-6 {width: 50%;}
-    .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
-    .col-s-9 {width: 75%;}
-    .col-s-10 {width: 83.33%;}
-    .col-s-11 {width: 91.66%;}
-    .col-s-12 {width: 100%;}
-  }
-  @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
-  }
+width: 90%;
+height: 100%;
+margin: 20px auto;
+float:center;
+
+
+
+
+
+}
+nav{
+
+	
+    background: rgb(0, 0, 0);
+	  
+	   width: 100%;
+	  
+    float: center;
+    word-spacing: 40pt;
+
+}
+
+}
+
+
